...
        <scene sceneID="9lV-SB-Vff">
            <objects>
                <tableViewController id="sip-PJ-3WM" customClass="ExperimentSetupVC" customModule="Bumblebees" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="iKE-xG-Zk2" customClass="AppTableView" customModule="Bumblebees" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                                    </prototypes>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ObjectsTable"/>
                                                    </userDefinedRuntimeAttributes>
                                                </tableView>
...
                                        </tableViewCellContentView>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="StartExperimentCell"/>
                                        </userDefinedRuntimeAttributes>
                                    </tableViewCell>
...
                                                        <real key="value" value="12"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="LeftButton"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                        <real key="value" value="12"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="RightButton"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                <real key="value" value="12"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UndoButton"/>
                                        </userDefinedRuntimeAttributes>
                                    </view>
...
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="VisitsLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
...
                                <state key="normal" image="HelpIcon"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="HelpButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="BeeExperimentCell"/>
                                        <connections>
                                            <segue destination="sip-PJ-3WM" kind="show" identifier="oneBeeSetup" id="tRa-hQ-xJp"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H73-vr-Tpf">
                                                    <rect key="frame" x="20" y="11" width="374" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ShareButton"/>
                                                    <state key="normal" title="Share Data and Labbook"/>
                                                    <connections>
...
