...
        setUpTheming()
        objectsTableView.objectsTableViewDelegate = self
        objectsTableView.objects = objectsStudied
        objectsTableView.family = family
        navigationItem.rightBarButtonItem?.title = "New \(family.familyName)"
        title = "One \(family.familyName) Setup"
        tableView.accessibilityIdentifier = "ExperimentSetupTable"
    }
    
    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
    }
...
