...

    
    override func viewDidLoad() {
        super.viewDidLoad()
        setUpTheming()
        nightModeSwitch.setOn(appDelegate.nightMode, animated: false)
        tableView.accessibilityIdentifier = "EntryTable"
    }
    
    func export<T: JSONExportable>(_ data: T) {
        data.exportAsJSON { (result) in
            switch result {
            case .success:
...
